# src/main/java/ru/mephi/vikingdemo/controller/VikingListener.java
@@ -7,6 +7,7 @@ package ru.mephi.vikingdemo.controller;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 import ru.mephi.vikingdemo.gui.VikingDesktopFrame;
+import ru.mephi.vikingdemo.model.Viking;
 import ru.mephi.vikingdemo.service.VikingService;
 
 /**
@@ -29,5 +30,24 @@ public class VikingListener {
 
     void testAdd() {
         gui.addNewViking(service.createRandomViking());
+    }
+
+    void addViking(Viking viking) {
+        service.addViking(viking);
+        gui.addNewViking(viking);
+    }
+
+    Viking findViking(String vikingName) {
+        return service.findViking(vikingName);
+    }
+
+    public void deleteViking(String vikingName) {
+        service.deleteViking(vikingName);
+        gui.deleteViking(vikingName);
+    }
+
+    public void updateViking(Viking viking) {
+        service.updateViking(viking);
+        gui.updateViking(viking);
     }
 }
